# DeepDiveIntoCLangauge

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  README.md  USAGE.md  truth-table.md
01.HelloWorld/src/app/: CMakeLists.txt  main.c
02.Basics/src/app/: CMakeLists.txt  main.c
03.Recursion/: README.md
03.Recursion/src/app/: CMakeLists.txt  main.c
04.IntegerPromotions/src/app/: CMakeLists.txt  main.c
05.CreateBoolLib/inc/: bool.h
05.CreateBoolLib/src/app/: CMakeLists.txt  main.c
06.BitwiseOperation/src/app/: CMakeLists.txt  main.c
07.BitwiseOperationEmbedded/inc/: bitwise.h
07.BitwiseOperationEmbedded/src/app/: CMakeLists.txt  main.c
07.BitwiseOperationEmbedded/src/lib/: CMakeLists.txt  bitwise.c
08.CalculatorUsingSwitch/src/app/: CMakeLists.txt  main.c
09.VariadicFunctions/src/app/: CMakeLists.txt  main.c
10.CallbackFunctions/inc/: calculator.h
10.CallbackFunctions/src/app/: CMakeLists.txt  main.c
10.CallbackFunctions/src/lib/: CMakeLists.txt  calculator.c
11.InlineFunctions/inc/: commonhelper.h
11.InlineFunctions/src/app/: CMakeLists.txt  main.c
12.Pointers/src/app/: CMakeLists.txt  main.c
13.StructVsUnion/src/app/: CMakeLists.txt  main.c
14.ADCSensorExample/: README.md
14.ADCSensorExample/inc/: types.h
14.ADCSensorExample/src/app/: CMakeLists.txt  main.c
14.ADCSensorExample/src/lib/: CMakeLists.txt
14.ADCSensorExample/src/lib/adc/: CMakeLists.txt  adc.c  adc.h
14.ADCSensorExample/src/lib/sensor/: CMakeLists.txt  sensor.c  sensor.h
14.ADCSensorExample/src/lib/time/: CMakeLists.txt  time.c  time.h
15.DynamicMemory/src/app/: CMakeLists.txt  main.c
16.RandomNoGenerator/src/app/: CMakeLists.txt  main.c
17.ImplementStdCFunction/inc/: errorstatus.h  types.h
17.ImplementStdCFunction/src/app/: CMakeLists.txt  main.c
18.StackImplementation/src/app/: CMakeLists.txt  main.c
18.StackImplementation/src/lib/stack/: CMakeLists.txt  stack.c  stack.h
19.QueueImplementation/src/app/: CMakeLists.txt  main.c
19.QueueImplementation/src/lib/: CMakeLists.txt
19.QueueImplementation/src/lib/circularqueue/: CMakeLists.txt  circularqueue.c  circularqueue.h
19.QueueImplementation/src/lib/linearqueue/: CMakeLists.txt  linearqueue.c  linearqueue.h
20.LinkListImplementation/inc/: types.h
20.LinkListImplementation/src/app/: CMakeLists.txt  main.c
20.LinkListImplementation/src/lib/: CMakeLists.txt
20.LinkListImplementation/src/lib/singlelinklist/: CMakeLists.txt  singlelinklist.c  singlelinklist.h
tests/: CMakeLists.txt  test_LinearQueue.c  test_Sample.c  test_Stack.c  test_Time.c
