set(EXE_NAME "BitwiseOperationEmbedded")
set(SRC_FILE main.c)
set(INC_PATH "../../inc")
add_executable(${EXE_NAME} ${SRC_FILE})
target_link_libraries(${EXE_NAME} ${LIB_BITWISE})
target_include_directories(${EXE_NAME} PUBLIC ${INC_PATH})
target_compile_options(${EXE_NAME} PRIVATE -Werror -Wall -Wextra)